Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17244

MAKETIME(900,0,0.111) returns a wrong result

    XMLWordPrintable

Details

    Description

      SELECT MAKETIME(900,0,0.111);
      

      +-----------------------+
      | MAKETIME(900,0,0.111) |
      +-----------------------+
      | 838:59:59.000         |
      +-----------------------+
      

      This is wrong. The expected result is 838:59:59.999, i.e. the maximum possible value with 3 fractional digits, according to the last argument precision.

      Attachments

        Issue Links

          Activity

            People

              bar Alexander Barkov
              bar Alexander Barkov
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.