MDEV-17244 MAKETIME(900,0,0.111) returns a wrong result